# swec-old

./: Cargo.toml  README.md  config.yaml  flake.nix  test.txt
src/: api.rs  argument_parser.rs  cli_handler.rs  config.rs  example_client.rs  main.rs  monitor.rs  multi_watcher.rs  status_history.rs  watcher.rs  watcher_pond.rs
src/api/: server.rs
src/handlers/: histfile.rs  mod.rs
src/status_handlers/: histfile.rs  mod.rs
src/watcher/: mod.rs  ringbuffer.rs
src/watcher_pond/: mod.rs
src/watchers/: mod.rs  ok_when.rs  pond.rs  status.rs  watcher.rs
swec/: Cargo.toml
swec-checker/: Cargo.toml
swec-checker/src/: main.rs
swec-client/: Cargo.toml
swec-client/src/: client.rs  main.rs
swec-client/swec-client-derive/: Cargo.toml
swec-client/swec-client-derive/src/: lib.rs
swec-core/: Cargo.toml
swec-core/src/: api.rs  checker.rs  lib.rs  watcher.rs
swec-watcher/: Cargo.toml
swec/src/: api.rs  main.rs  ringbuffer.rs
swec/src/watcher/: mod.rs
