[package]
name = "swec"
version = "0.1.0"
edition = "2021"
authors = ["tarneo <tarneo@tarneo.fr>"]
description = "Simple Web Endpoint Checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
parking_lot = "0.12.1"
regex = "1.9.1"
reqwest = "0.11.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.22"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.5"
