[package]
name = "swec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version="1", features=["full"] }
