[package]
name = "swec-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = "4.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"
tokio = "1.36.0"
swec-core = { path = "../swec-core" }
swec-client = { path = "../swec-client" }
