[package]
name = "swec-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swec-core = { path = "../swec-core" }
swec-client-derive = { path = "swec-client-derive" }
reqwest = { version = "0.11.24", features = ["json"] }
chrono = "0.4.34"
serde_json = "1.0.114"
async-trait = "0.1.77"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls-crate"] }
futures-util = "0.3.30"
tokio = "1.36.0"
tracing = "0.1.40"
clap = { version = "4.5.2", features = ["derive"] }
serde = "1.0.198"
