[package]
name = "swec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.25", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
swec-core = { path = "../swec-core" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0.114"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["trace"] }
